# higgs-audio

./: download_models.py  pyproject.toml  tts.py  vc.py
boson_multimodal/audio_processing/descriptaudiocodec/dac/model/: base.py
boson_multimodal/data_collator/: higgs_audio_collator.py
boson_multimodal/serve/: serve_engine.py
higgs_audio/: __init__.py  core.py  utils.py
higgs_audio/cli/: __init__.py  tts.py  vc.py
